# timeseer-custom-modules

./: .gitignore  LICENSE  README.md  build.ps1  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_binary.py
.github/workflows/: ci.yml
custom_modules/: custom_module.py  my_module.py
examples/: Timeseer.toml  count_points.py
