[project]
name = "timeseer-custom-modules"
version = "0.2.0"
description = "Custom modules for Timeseer.AI"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    # "Private :: Do Not Upload",
]
requires-python = ">=3.12"
dependencies = [
    "pyarrow >= 18.0.0"
]

[dependency-groups]
dev = [
    "cx-freeze>=8.4.0",
    "mypy>=1.17.1",
    "ruff>=0.12.8",
]

[[tool.cxfreeze.executables]]
script = "main.py"
target_name = "timeseer-custom-modules"

[tool.cxfreeze.build_exe]
include_msvcr = true
replace_paths = [["*", "custom"]]
